src/Podium.css
.results-page {
  text-align: center;
}

.podium {
  display: flex;
  align-items: flex-end;
  justify-content: space-around;
  margin: 200px;
  margin-bottom: 50px;
}

.podium-level {
  width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  font-size: 18px;
  font-weight: bold;
  color: white;
}

#third-place {
  background-color: #F4511E; /* Bronze */
  height: 100px;
}

#second-place {
  background-color: #1E88E5; /* Silver */
  height: 200px;
}

#first-place {
  background-color: #FFB300; /* Gold */
  height: 300px;
}

